--- a/css/estilo.css
+++ b/css/estilo.css
@@ -29,7 +29,24 @@ div a {
 /*
 h1+p{
     color: red;
-}*/
+}
 h1~p {
     color: pink;
+}*/
+
+* {
+    color: red;
+}
+
+h2 {
+    color: blue;
+}
+
+
+
+h2#amarelo {
+    color: yellow;
+}
+h2.verde {
+    color: green;
 }
