--- a/css/estilo.css
+++ b/css/estilo.css
@@ -68,8 +68,11 @@ ul {
     list-style-type: none;
 }
 
-li {
-    background: url(../imagens/seta.png) no-repeat left center;
-    padding: 20px;
-
+ul a {
+    width: 300px;
+    height: 40px;
+    border: 1px solid red;
+    display: block;
+    background: url(../imagens/menu.png)  no-repeat left bottom;
+    
 }
