--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,13 @@ float: left;
 }
 
 ul li {
-    border: 1px solid red;
     float: left;
 }
 
 ul a {
-    
+    display: block;
+    padding: 0 2em;
+    line-height: 2em;
+    color: #fff;
+    background: url(../imagens/divisor.png) repeat-y;
 }
