--- a/css/style.css
+++ b/css/style.css
@@ -20,11 +20,21 @@ ul a {
     text-decoration: none;
 }
 
-ul .primeiro a {
+ul .home-primeiro a {
     background: none;
 }
 
 ul a:hover {
+    color: #085662;
+    background: #44cade;
+}
+
+#home #navegacao .home-primeiro a, 
+#sobre #navegacao .sobre a,
+#servicos #navegacao .servicos a,
+#noticias #navegacao .noticias a,
+#contato #navegacao .contato a
+{
     color: #085662;
     background: #44cade;
 }
