--- a/css/projeto.css
+++ b/css/projeto.css
@@ -79,32 +79,118 @@ body.fotos #navegacao a#fotos
     background: #f5f5f5;
 }
 
+#lateral {
+    width: 180px;
+    float: left;
+    margin: 0 0 20px -750px;
+}
 #primario {
     width: 270px;
-    background: blue;
     float: left;
+    margin: 0 0 20px 195px;
+}
+
+#duas-colunas #primario {
+    width: 555px;
+}
+
+#uma-coluna #primario {
+    width: 750px;
+    margin: 0 0 20px 0px;
 }
 
 #secundario {
     width: 270px;
-    background: green;
     float: left;
+    margin: 0 0 20px 15px;
 }
 
-#lateral {
-    width: 180px;
-    background: yellow;
-    float: left;
+.caixa {
+    margin: 10px 0;
+    padding: 5px;
+    background: #f3f3f3 url(../imagens/projeto/fundo-caixa.png);
+}
+
+.caixa-conteudo {
+    background: #fff;
+    padding: 5px;
+    margin-top: 5px;
+}
+
+h2 {
+    font-size: 1em;
+    background: #294c71;
+    color: #fff;
+    padding: 5px;
+}
+
+/*Menus Laterais*/
+#lateral ul a {
+    font-size: 0.9em;
+    padding: 3px;
+    display: block;
+    line-height: 30px;
+    color: #000;
+    text-decoration: none;
+    border-bottom: 1px solid #f3f3f3;
+}
+
+#lateral ul a:hover {
+    background: #f9f9f9 url(../imagens/projeto/marcador.png) no-repeat left center;
+    padding-left: 20px;
+    color: #a1a1a1;
 }
 
 
+/* Formatando formulários */
+label {
+    display: block;
+    cursor: pointer;
+}
+
+input {
+    padding: 5px;
+    width: 125px;
+    font-size: 0.em;
+    background: #fff;
+}
+
+input.submit {
+    width: 80px;
+    color: #fff;
+    background-color: #b10333;
+    border: 2px solid #870529;  
+}
+
+/*Formatando imagens*/
+
+img.imagem-principal {
+    width: 98%;
+    border: 3px solid #dfdfdf;
+}
+
+/*Formatando cabeçalhos */
+h3 {
+    text-transform: uppercase;
+    display: inline;
+    font-size: 0.8em;
+    padding: 3px;   
+}
+
+.destaque h3{
+    background: #b10333;
+    color: white;
+}
+
+.entrevista h3 {
+    background: #de003e;
+}
 
 /*Rodape*/
 #container-rodape {
     background: #294c71; 
     padding: 20px;
 }
-
 #rodape {
     width: 750px;
     margin: 0 auto;
