--- a/css/chale.css
+++ b/css/chale.css
@@ -58,5 +58,36 @@ body {
 #conteudo-menu {
     margin-left: 90px;
     margin-right: 15px;
-    padding-top: ;
+    padding-top: 15px;
+}
+
+#menu-locais {
+    border-bottom: 1px solid #b5ab56;
+    border-top: 1px solid #b5ab56;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    font-size: 0.7em;
+    color: #8b8448;
+}
+#menu-locais .locais {
+    float: left;
+    line-height: 2.1em;
+}
+
+a {
+    text-decoration: none;
+}
+
+a.reserva {
+    text-transform: uppercaser;
+    background: #a29750;
+    color: #fff5b0;
+    padding: 5px 10px;
+    float: right;
+}
+
+/* Barra de navegação vertical */
+
+#menu {
+    margin-top: 15px;
 }
