--- a/css/chale.css
+++ b/css/chale.css
@@ -11,7 +11,7 @@ body {
 }
 
 #container {
-    background: #ede9cc;
+    background: #ede9cc url(../imagens/chale/bg-container.png) top center repeat-y;
     margin: 0 auto;
     min-width: 740px;
     max-width: 1180px;
@@ -91,3 +91,137 @@ a.reserva {
 #menu {
     margin-top: 15px;
 }
+
+ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
+ul#navegacao {
+    float: left;
+}
+
+ul#navegacao a {
+    text-transform: uppercase;
+    font-size: 0.8em;
+    padding: 5px;
+    color: #6e672c;
+    line-height: 30px;
+}
+
+ul#navegacao a:hover {
+    background: #fdf6be;
+}
+
+.depoimento {
+    width: 226px;
+    height: 164px;
+    float: right;
+}
+
+/* Área de conteúdos */
+#area-principal {
+    float: left;
+    width: 50%;
+    background: url(../imagens/chale/bg-area-principal.png) top left repeat-x;
+    padding: 15px 0px;
+}
+
+#area-lateral {
+    float: right;
+    width: 50%;
+    background: url(../imagens/chale/bg-area-lateral.png) top left repeat-x;
+    padding: 20px 0px;
+}
+
+.conteudo {
+    margin: 0 auto;
+    width: 90%;
+}
+
+#rodape {
+    clear: both;
+    padding: 16px;
+    background: #fff url(../imagens/chale/bg-rodape.png) repeat-x top;
+    color: #7d7640;
+}
+
+/* Formatações de textos */
+h2 {
+    color: #7d7640;
+    font-size: 1.1em;
+    padding: 5px 0px;
+}
+
+p {
+    font-size: 1em;
+    margin-bottom: 10px;
+}
+
+/* Formatações da area lateral */ 
+#beneficios li {
+    padding: 8px;
+    border-bottom: 1px solid #f3efcb;
+    height: 6em;
+}
+
+#beneficios li a img {
+    float: left;
+    margin-right: 8px;
+}
+
+#beneficios li a p {
+    color: #000;
+    font-size: 0.8em;
+}
+
+#beneficios li a h3 {
+    background: url(../imagens/chale/ornamento.png) no-repeat center right;
+    font-size: 1em;
+    color: #615b2d;
+    padding: 5px 0;
+}
+
+#beneficios li:hover {
+    background: #f6f3d6;
+    cursor: pointer;
+}
+
+/* Do jeito que eu fiz
+.conteudo img {
+    padding: 5px;
+    float: left;
+}
+
+#area-lateral #apartamento {
+    width: 90%;
+    height: 120px;
+}
+
+#apartamento:hover {
+    background: rgba(255, 255, 255, 0.548);
+    cursor: pointer;
+}
+
+#piscina:hover {
+    background: rgba(255, 255, 255, 0.548);
+    cursor: pointer;
+}
+
+#restaurante:hover {
+    background: rgba(255, 255, 255, 0.548);
+    cursor: pointer;
+}
+
+#area-lateral #restaurante {
+    width: 90%;
+    height: 120px;
+}
+
+#area-lateral #piscina {
+    width: 90%;
+    height: 120px;
+}
+
+*/
